# se-data-dump-transformer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README-python.md  README.md  config.example.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: static-analysis.yml  transformer.yml  uploader.yml
docs/: Automated downloads.md  Error recovery.md  JSON.md  Notifications.md  README.md  Schema.md
docs/meta/: Hashes.md  Known watermarks.md
scripts/: README.md  v1-fingerprint-scanner.sh
sedd/: cli.py  config.py  countermeasures.py  driver.py  main.py  pipscript.py  utils.py
sedd/config/: __init__.py  config.py  defaults.py  typings.py
sedd/data/: files_map.py  sites.py
sedd/meta/: notifications.py
sedd/ubo/: __init__.py  ubo.py  utils.py
sedd/watcher/: handler.py  observer.py  recovery.py  state.py
transformer/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSES.md  dep_provider.cmake
transformer/3p-patches/: libarchive.patch  xz.patch
transformer/cmake/: FindLibLZMA.cmake  FindPackageHandleStandardArgs.cmake  FindZSTD.cmake
transformer/src/: Main.cpp
transformer/src/data/: ArchiveParser.cpp  ArchiveParser.hpp  ArchiveWriter.cpp  ArchiveWriter.hpp  DataDumpFileType.hpp  FileCompressor.hpp  GlobalContext.hpp  Schema.hpp  Transformer.cpp  Transformer.hpp
transformer/src/data/filter/: AnswerBotFilter.cpp  AnswerBotFilter.hpp  FabricatedDataV1.cpp  FabricatedDataV1.hpp  Filter.cpp  Filter.hpp
transformer/src/data/transformers/: JSONTransformer.cpp  JSONTransformer.hpp  SQLiteTransformer.cpp  SQLiteTransformer.hpp  XMLTransformer.cpp  XMLTransformer.hpp
transformer/src/data/util/: ArchiveCache.cpp  ArchiveCache.hpp
transformer/src/meta/: ArchiveMacros.hpp  License.hpp  MetaFiles.hpp
transformer/src/util/: InputPreprocessor.cpp  InputPreprocessor.hpp  StringSanitiser.cpp  StringSanitiser.hpp
transformer/src/wrappers/: yyjson.hpp
transformer/tests/: CMakeLists.txt  Runner.cpp
transformer/tests/src/: CheckSchema.cpp  FilterTests.cpp  TestUnicodeManagement.cpp
transformer/tests/src/filters/: FabricatedDataFilteringTests.cpp
