[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sedd"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "sedd"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "selenium==4.32.0",
    "undetected-geckodriver-lw>=2.1.0",
    "desktop-notifier==5.0.1",
    "watchdog==4.0.2",
    "requests"
]
readme = "README-python.md"

authors = [
    { name = "LunarWatcher", email = "oliviawolfie@pm.me" },
]

description = "Unofficial, community-made tool for downloading the Stack Exchange data dumps"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
keywords = [
    "Stack Exchange", "data dump", "Stack Exchange data dump",
    "downloader"
]

[project.urls]
Homepage = "https://github.com/LunarWatcher/se-data-dump-transformer"
Documentation = "https://github.com/LunarWatcher/se-data-dump-transformer"
Repository = "https://github.com/LunarWatcher/se-data-dump-transformer.git"
Issues = "https://github.com/LunarWatcher/se-data-dump-transformer/issues"
Changelog = "https://github.com/LunarWatcher/se-data-dump-transformer/releases"

